package edu.austral.ingsis.clifford;

public interface FileSystem {
  String getName();
}
